added work sans fonts

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="architect.css">
 </head>
-<body>
+<body class="work-sans">
     <header>
+        <nav>
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
 
     </header>
     <main>
