--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="architect.css">
 </head>
 <body class="work-sans">
-    <header>
-        <nav>
+    <header class="bg-color">
+        <nav class="nav-itemh display-flex">
             <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">       
+                <li class="nav-items"><a href="" class="link text-dark2">Home</a></li>
+                <li class="nav-items"><a href="" class="link text-dark2">About</a></li>
+                <li class="nav-items"><a href="" class="link text-dark2">Contact Us</a></li>
+                <li class="nav-items"><a href="" class="link text-dark2">Login</a></li>                                
+            </ul>
         </nav>
+        <div class="banner">
+
+        </div>
 
     </header>
     <main>
