--- a/index.html
+++ b/index.html
@@ -18,12 +18,29 @@
             </ul>
         </nav>
         <div class="banner">
-
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+<img class="banner-image" src="images/banner.png" alt="">
         </div>
-
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="team-image-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+                    </div>
+        <div class="features">
+<h3 class="feature-title"> <span id="p1">Quick list</span> <span id="p2">of Our</span> <span id="p3">Features</span></h3>
+<p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+<button class="btn-primary">Explore More</button>
+        </div>
+        </section>
+        
     </main>
     <footer>
 
